# agent-workbench

./: .env.example.dev  .env.example.local  .env.example.production  .env.example.stage  .gitignore  AGENTS.md  AGENT_WORKFLOW.md  MEMORY.md  Makefile  PROJECT_BRIEF.md  QUALITY_CHECKLIST.md  README.md  TODO.md  compose.integration.yaml  compose.yaml  docker-compose.yaml  docker-compose.yml  status.yaml
api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 20260522_a1b2c3d4e5f6_add_estimated_duration_seconds_to_tasks.py  20260522_eb91537942a2_initial_schema.py  20260523_a2b3c4d5e6f7_add_role_and_model_tier_to_tasks.py  20260523_b3c4d5e6f7a8_add_model_tier_to_agents.py  20260523_c4d5e6f7a8b9_rename_phase_vocabulary.py  20260523_c8e1f2a3b4d5_add_idempotency_keys_table.py  20260523_d5e6f7a8b9c0_add_ai_servers_table.py  20260523_d9e0f1a2b3c4_add_runtime_metrics_to_runs.py  20260523_e1f2a3b4c5d6_task_status_state_machine.py  20260523_f2a3b4c5d6e7_add_task_relationships_table.py  20260527_a1b2c3d4e5f6_add_unique_constraint_project_sections_slug.py
api/src/agent_workbench/: app.py  config.py  database.py  errors.py  metrics.py
api/src/agent_workbench/agents/: models.py  routes.py  service.py
api/src/agent_workbench/ai_servers/: models.py  (+2 more)
api/tests/: conftest.py  test_agents.py  test_ai_servers.py  test_health.py  test_idempotency.py  test_integration.py  test_metrics.py  test_project_sections.py  test_project_status.py  test_projects.py  test_reviews.py  test_runs.py  test_task_relationships.py  test_tasks.py
(+119 files in other folders)
