[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-workbench"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
]

[project.scripts]
agent-workbench-api = "agent_workbench.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-flask>=1.3",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_workbench"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
